Fix sabotage auto react for Garbozia and run code cleaner (#3962)
* Update SabotageService.java

* Refactor string comparisons and minor code cleanups

Replaces many 'string.equalsIgnoreCase(variable)' patterns with the more robust 'constant.equalsIgnoreCase(variable)' form throughout the codebase, improving null safety and consistency. Also includes minor refactoring, code cleanup, and style improvements such as removing unnecessary returns, simplifying boolean expressions, and updating variable initializations.

* Refactor and clean up codebase for consistency

This commit applies a wide range of code cleanups and refactoring for consistency and readability. Changes include replacing static imports with explicit ones, improving string comparisons, fixing indentation, simplifying boolean expressions, removing unnecessary object comparisons, and consolidating multi-line statements. No functional logic is changed, but the codebase is now more maintainable and easier to read.

* Refactor and modernize codebase for clarity and efficiency

This commit applies a wide range of code improvements across the project, including replacing deprecated or verbose collection and stream usages with modern Java idioms (e.g., use of .addAll, .isEmpty, .getFirst, and method references), simplifying null and empty checks, improving string concatenation, and removing redundant code. It also standardizes option handling in command classes, enhances readability, and fixes minor logic issues. These changes improve code maintainability, readability, and performance without altering core functionality.